# percona-server

./: .cirrus.yml  .gitignore  CMakeLists.txt  VERSION  azure-pipelines.yml  config.h.cmake
build-ps/: percona-server.spec
build-ps/debian/: percona-server-server.install
client/: CMakeLists.txt  mysql.cc  mysqlbinlog.cc  mysqldump.cc  mysqltest.cc
cmake/: boost.cmake  do_abi_check.cmake  lz4.cmake  maintainer.cmake  readline.cmake  ssl.cmake  zstd.cmake
components/bulk_load/bulk_loader/: bulk_loader_abstract.cc
components/bulk_load/stream_parser/: parser_iterator.h  parser_row.h  stream_parser.cc  stream_parser.h
components/keyrings/keyring_vault/: CMakeLists.txt  README  component_callbacks.cc  keyring_vault.cc  keyring_vault.h
components/keyrings/keyring_vault/backend/: backend.cc  backend.h  vault_client.cc  vault_client.h  vault_parser_composer.cc
components/keyrings/keyring_vault/config/: config.cc  config.h
components/keyrings/keyring_vault/keyring_vault-test/: CMakeLists.txt
components/keyrings/keyring_vault/service_implementation/: keyring_encryption_service_definition.cc  keyring_generator_service_definition.cc  keyring_keys_metadata_iterator_service_definition.cc  keyring_load_service_definition.cc  keyring_metadata_query_service_definition.cc  keyring_reader_service_definition.cc  keyring_writer_service_definition.cc
include/: my_sys.h  mysql.h.pp  mysql_com.h
include/mysql/: plugin_audit.h.pp
include/mysqlpp/: udf_context.hpp
libbinlogevents/include/: debug_vars.h
man/: mysqldumpslow.1
mysql-test/: mysql-test-run.pl  valgrind.supp
mysql-test/include/: check-testcase.test  mtr_test_data_audit.sql  mtr_warnings.sql  plugin.defs
mysql-test/lib/: mtr_cases.pm  mtr_report_junit.pm
mysql-test/r/: all_persisted_variables.result  backup_locks_mysqldump.result  create.result  dd_is_compatibility_cs.result  error_simulation.result  events_1.result  events_bugs.result  grant.result  index_merge_innodb.result  index_merge_myisam.result  information_schema_cs.result  information_schema_keywords.result  mysqld--help-notwin.result  mysqltest.result  opt_hints_set_var.result  show_check_ci.result  show_check_cs.result  variables.result
mysql-test/t/: all_persisted_variables.test  create.test  events_1.test  events_bugs.test  mysqltest.test  show_check_cs.test
mysys/: CMakeLists.txt
plugin/audit_log_v2/: CMakeLists.txt  audit_error_log.h  audit_filter.cc  audit_filter.h  audit_log.cc  audit_log.h  audit_record.cc  audit_record.h  audit_rule.cc  audit_rule.h  audit_rule_registry.cc  audit_rule_registry.h  audit_services.cc  audit_services.h  log_record_formatter.cc  log_record_formatter.h  log_writer.cc  log_writer.h
plugin/auth_ldap/: CMakeLists.txt
plugin/authentication_fido/: CMakeLists.txt
plugin/binlog_utils_udf/: CMakeLists.txt
plugin/clone/include/: clone.h
plugin/clone/src/: clone_client.cc  clone_plugin.cc
plugin/fulltext/mecab_parser/: plugin_mecab.cc
plugin/fulltext/ngram_parser/: plugin_ngram.cc
plugin/group_replication/include/: plugin.h  plugin_variables.h
plugin/group_replication/src/: plugin.cc
plugin/keyring_vault/: CMakeLists.txt  i_vault_curl.h  i_vault_io.h  i_vault_parser_composer.h  vault_base64.cc  vault_base64.h  vault_credentials.cc  vault_credentials.h  vault_credentials_parser.cc  vault_credentials_parser.h  vault_curl.cc  vault_curl.h  vault_io.cc  vault_io.h  vault_key.cc  vault_key.h  vault_key_serializer.h  vault_keyring.cc  vault_keys_container.cc  vault_keys_container.h  vault_keys_list.cc  vault_keys_list.h  vault_parser_composer.cc  vault_parser_composer.h
plugin/keyring_vault/keyring_vault-test/: CMakeLists.txt  keyring_vault-test.cc  vault_keys_container_ex.h
plugin/procfs/: CMakeLists.txt
plugin/tokudb-backup-plugin/: CMakeLists.txt
scripts/: CMakeLists.txt
share/: messages_to_clients.txt  messages_to_error_log.txt
sql/: CMakeLists.txt  binlog.cc  binlog.h  binlog_reader.h  dd_table_share.cc  field.cc  field.h  gen_lex_token.cc  handler.cc  handler.h  item_func.cc  lex.h  log.cc  log_event.cc  log_event.h  log_resource.cc  mdl.cc  mysqld.cc  mysqld.h  options_mysqld.h  parse_tree_hints.cc  parse_tree_nodes.cc  parse_tree_nodes.h  rpl_binlog_sender.cc  rpl_gtid.h  rpl_gtid_state.cc  rpl_replica.cc  rpl_rli.cc  rpl_rli.h  rpl_rli_pdb.cc  set_var.cc  set_var.h  signal_handler.cc  sp.cc  sp_head.cc  sql_base.cc  sql_class.cc  sql_class.h  sql_connect.cc  sql_connect.h  (+22 more)
sql-common/: client.cc  net_serv.cc
sql/auth/: auth_common.h  sql_auth_cache.cc  sql_authentication.cc  sql_authorization.cc
sql/partitioning/: partition_base.cc
storage/federated/: ha_federated.cc
storage/innobase/buf/: buf0buf.cc  buf0dblwr.cc  buf0flu.cc
storage/innobase/ddl/: ddl0builder.cc
storage/innobase/dict/: dict0dd.cc  dict0dict.cc
storage/innobase/fil/: fil0crypt.cc  fil0fil.cc
storage/innobase/fts/: fts0opt.cc  fts0que.cc
storage/innobase/handler/: ha_innodb.cc  ha_innopart.cc  handler0alter.cc  i_s.cc  xtradb_i_s.cc
storage/innobase/ibuf/: ibuf0ibuf.cc
storage/innobase/include/: btr0btr.h  buf0buf.h  fil0fil.h  fts0priv.h  log0recv.h  os0file.h  row0sel.h  sess0sess.h  srv0srv.h  sync0types.h
storage/innobase/lock/: lock0lock.cc  lock0wait.cc
storage/innobase/log/: log0recv.cc
storage/innobase/os/: os0file.cc
storage/innobase/row/: row0import.cc  row0ins.cc  row0log.cc  row0mysql.cc  row0sel.cc  row0upd.cc
storage/innobase/srv/: srv0mon.cc  srv0srv.cc  srv0start.cc
storage/innobase/trx/: trx0purge.cc  trx0trx.cc
storage/myisam/: ha_myisam.cc  myisamchk.cc
storage/perfschema/: pfs.cc  pfs_instr.cc
storage/rocksdb/: CMakeLists.txt  ha_rocksdb.cc  rdb_datadic.cc
unittest/gunit/: CMakeLists.txt
unittest/gunit/components/keyring_vault/: CMakeLists.txt  vault_config-t.cc  vault_parser-t.cc
unittest/gunit/keyring/: mock_serializer.h
unittest/gunit/keyring_vault/: CMakeLists.txt  generate_credential_file.cc  generate_credential_file.h  incorrect_vault_key.h  vault_credentials_parser-t.cc  vault_environment.cc  vault_environment.h  (+8 more)
vio/: vio.cc  viosocket.cc
(+76 files in other folders)
